Attempt at fixing zoom on mobile

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -66,4 +66,5 @@ td{
 
 .skillsGrid img{
     width:80%;
+    min-width: 50px;
 }
